// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search displays loading spinner when searching 1`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-form-group"
  >
    <label
      class="nhsuk-label"
      for="search-input"
      id="search-input--label"
    >
      Enter a health related query
    </label>
    <div
      class="nhsuk-hint"
      id="search-input--hint"
    >
      e.g What is an HRT PPC?
    </div>
    <input
      aria-describedby="search-input--hint"
      aria-labelledby="search-input--label"
      class="nhsuk-input"
      id="search-input"
      name="search"
      placeholder="type something here"
      type="text"
      value="what is an HRT PPC"
    />
  </div>
  <a
    aria-disabled="false"
    class="nhsuk-button"
    data-prevent-double-click="true"
    draggable="false"
    id="submit"
    role="button"
  >
    Submit
  </a>
</div>
`;

exports[`Search displays loading spinner when searching 2`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-form-group"
  >
    <label
      class="nhsuk-label"
      for="search-input"
      id="search-input--label"
    >
      Rhowch gwestiwn sy'n ymwneud â iechyd
    </label>
    <div
      class="nhsuk-hint"
      id="search-input--hint"
    >
      e.e. Beth yw HRT PPC?
    </div>
    <input
      aria-describedby="search-input--hint"
      aria-labelledby="search-input--label"
      class="nhsuk-input"
      id="search-input"
      name="search"
      placeholder="teipiwch rhywbeth yma"
      type="text"
      value="what is an HRT PPC"
    />
  </div>
  <a
    aria-disabled="false"
    class="nhsuk-button"
    data-prevent-double-click="true"
    draggable="false"
    id="submit"
    role="button"
  >
    Cyflwyno
  </a>
</div>
`;

exports[`Search displays loading spinner when searching 3`] = `
<div
  class="relative w-full"
>
  <div
    class="nhsuk-form-group"
  >
    <label
      class="nhsuk-label"
      for="search-input"
      id="search-input--label"
    >
      Cuir fiosrachadh a bhaineas ri slàinte
    </label>
    <div
      class="nhsuk-hint"
      id="search-input--hint"
    >
      e.g. Dè tha PPC HRT?
    </div>
    <input
      aria-describedby="search-input--hint"
      aria-labelledby="search-input--label"
      class="nhsuk-input"
      id="search-input"
      name="search"
      placeholder="cuir rudeigin an seo"
      type="text"
      value="what is an HRT PPC"
    />
  </div>
  <a
    aria-disabled="false"
    class="nhsuk-button"
    data-prevent-double-click="true"
    draggable="false"
    id="submit"
    role="button"
  >
    Cuir ris
  </a>
</div>
`;

exports[`Search rendered component should match snapshot (cy) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label"
        for="search-input"
        id="search-input--label"
      >
        Rhowch gwestiwn sy'n ymwneud â iechyd
      </label>
      <div
        class="nhsuk-hint"
        id="search-input--hint"
      >
        e.e. Beth yw HRT PPC?
      </div>
      <input
        aria-describedby="search-input--hint"
        aria-labelledby="search-input--label"
        class="nhsuk-input"
        id="search-input"
        name="search"
        placeholder="teipiwch rhywbeth yma"
        type="text"
        value=""
      />
    </div>
    <a
      aria-disabled="false"
      class="nhsuk-button"
      data-prevent-double-click="true"
      draggable="false"
      id="submit"
      role="button"
    >
      Cyflwyno
    </a>
  </div>
</div>
`;

exports[`Search rendered component should match snapshot (en) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label"
        for="search-input"
        id="search-input--label"
      >
        Enter a health related query
      </label>
      <div
        class="nhsuk-hint"
        id="search-input--hint"
      >
        e.g What is an HRT PPC?
      </div>
      <input
        aria-describedby="search-input--hint"
        aria-labelledby="search-input--label"
        class="nhsuk-input"
        id="search-input"
        name="search"
        placeholder="type something here"
        type="text"
        value=""
      />
    </div>
    <a
      aria-disabled="false"
      class="nhsuk-button"
      data-prevent-double-click="true"
      draggable="false"
      id="submit"
      role="button"
    >
      Submit
    </a>
  </div>
</div>
`;

exports[`Search rendered component should match snapshot (gd) 1`] = `
<div>
  <div
    class="relative w-full"
  >
    <div
      class="nhsuk-form-group"
    >
      <label
        class="nhsuk-label"
        for="search-input"
        id="search-input--label"
      >
        Cuir fiosrachadh a bhaineas ri slàinte
      </label>
      <div
        class="nhsuk-hint"
        id="search-input--hint"
      >
        e.g. Dè tha PPC HRT?
      </div>
      <input
        aria-describedby="search-input--hint"
        aria-labelledby="search-input--label"
        class="nhsuk-input"
        id="search-input"
        name="search"
        placeholder="cuir rudeigin an seo"
        type="text"
        value=""
      />
    </div>
    <a
      aria-disabled="false"
      class="nhsuk-button"
      data-prevent-double-click="true"
      draggable="false"
      id="submit"
      role="button"
    >
      Cuir ris
    </a>
  </div>
</div>
`;
